# learning-claude-code

./: 20251203.md
tiktok-video-comparison/: COMPARISON.md  README.md
tiktok-video-comparison/approach-1-saas/: README.md
tiktok-video-comparison/approach-1-saas/prompts/: financial-basics.txt  generic-template.txt  uno-no-mercy.txt
tiktok-video-comparison/approach-2-api-pipeline/: .env.example  README.md  pipeline.py  requirements.txt
tiktok-video-comparison/approach-3-hybrid/: .env.example  README.md  generate_assets.py  orchestrate.py  requirements.txt
uno-no-mercy-video/: .gitignore  Cargo.toml  README.md
uno-no-mercy-video/output/: compile_video.sh  voiceover_script.txt
uno-no-mercy-video/src/: cards.rs  character.rs  effects.rs  main.rs  scenes.rs  text.rs  video.rs
