[package]
name = "uno-no-mercy-video"
version = "0.1.0"
edition = "2021"
description = "UNO No Mercy animated explainer video generator"

[dependencies]
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
